--- a/styles/FLATBOOTS/template/login_body.html
+++ b/styles/FLATBOOTS/template/login_body.html
@@ -74,7 +74,7 @@
 					</div>
 					<!-- ENDIF -->
 				 <!-- ENDIF -->
-					<button type="submit" class="btn btn btn-primary" tabindex="6" name="login" value="{L_LOGIN}">{L_LOGIN_ME_IN}</button>
+					<button type="submit" class="btn btn btn-default" tabindex="6" name="login" value="{L_LOGIN}">{L_LOGIN_ME_IN}</button>
 				
 				  <!-- IF S_DISPLAY_FULL_LOGIN and (U_SEND_PASSWORD or U_RESEND_ACTIVATION) -->
 				    <div class="space10"></div>
