--- a/styles/FLATBOOTS/template/overall_footer.html
+++ b/styles/FLATBOOTS/template/overall_footer.html
@@ -52,6 +52,24 @@
 								<li><a href="//www.pinterest.com/heavenlyherbals" target="_blank" class="pinterest"><i
 											class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 							</ul>
+
+							<ul class="payment-list list-inline mobile-visible">
+								<li><a href="javascript:void(0);"><img loading="lazy"
+											src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/paypel.webp"
+											alt="Paypel" width="50" height="32"></a></li>
+								<li><a href="javascript:void(0);"><img loading="lazy"
+											src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/mscaed.webp"
+											alt="Mscaed" width="51" height="33"></a></li>
+								<li><a href="javascript:void(0);"><img loading="lazy"
+											src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/visa.webp"
+											alt="Visa" width="50" height="31"></a></li>
+								<li><a href="javascript:void(0);"><img loading="lazy"
+											src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/amaricam.webp"
+											alt="Amaricam" width="50" height="31"></a></li>
+								<li><a href="javascript:void(0);"><img loading="lazy"
+											src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/discover.webp"
+											alt="Discover" width="50" height="33"></a></li>
+							</ul>
 						</div>
 					</div>
 	
@@ -104,7 +122,7 @@
 									<li>Email: <a href="mailto:sales@heavenlyherbalsinc.com">sales@heavenlyherbalsinc.com</a></li>
 								</ul>
 								
-								<ul class="payment-list list-inline ">
+								<ul class="payment-list list-inline mobile-disable">
 									<li><a href="javascript:void(0);"><img loading="lazy"
 												src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/paypel.webp"
 												alt="Paypel" width="50" height="32"></a></li>
