--- a/styles/FLATBOOTS/template/ucp_login_link.html
+++ b/styles/FLATBOOTS/template/ucp_login_link.html
@@ -58,7 +58,7 @@
 					  </div> 
 					</div>
 				
-					<button type="submit" class="btn btn btn-primary" tabindex="5" name="login" value="{L_LOGIN}" data-loading-text="{L_LOADING_LOG_IN} <i class='fa-spin fa fa-spinner fa-lg'></i>">{L_LOGIN_ME_IN}</button>
+					<button type="submit" class="btn btn btn-default" tabindex="5" name="login" value="{L_LOGIN}" data-loading-text="{L_LOADING_LOG_IN} <i class='fa-spin fa fa-spinner fa-lg'></i>">{L_LOGIN_ME_IN}</button>
 					<!-- IF CAPTCHA_TEMPLATE and S_CONFIRM_CODE -->
 						<div class="space10"></div>
 						<!-- DEFINE $CAPTCHA_TAB_INDEX = 4 -->
