--- a/styles/FLATBOOTS/template/viewforum_body.html
+++ b/styles/FLATBOOTS/template/viewforum_body.html
@@ -152,7 +152,7 @@
 					  <label for="autologin"><input type="checkbox" name="autologin" id="autologin">{L_LOGIN_REMEMBER}</label>
 					</div>
 				    <!-- ENDIF -->
-					<button type="submit" class="btn btn-primary" name="login" value="{L_LOGIN}" data-loading-text="{L_LOADING_LOG_IN} <i class='fa-spin fa fa-spinner fa-lg'></i>">{L_LOGIN_ME_IN}</button>
+					<button type="submit" class="btn btn-default" name="login" value="{L_LOGIN}" data-loading-text="{L_LOADING_LOG_IN} <i class='fa-spin fa fa-spinner fa-lg'></i>">{L_LOGIN_ME_IN}</button>
 					{S_LOGIN_REDIRECT}
 					{S_FORM_TOKEN_LOGIN}
 				  </p>
