update wellness forum

--- a/styles/FLATBOOTS/template/addons/header_teaser_body.html
+++ b/styles/FLATBOOTS/template/addons/header_teaser_body.html
@@ -2,7 +2,7 @@
 <div class="masthead"></div>
     <div class="wrapper-head">
 	 		<div class="container">
-				<div class="col-md-6">
+				<div class="col-md-7 col-sm-7 col-xs-6">
 					<!-- IF TEASER_TITLE neq '' or TEASER_TEXT neq '' -->
 					<h1>{TEASER_TITLE}</h1>
 					<p>{TEASER_TEXT}</p>
@@ -11,8 +11,8 @@
 					<p>{L_FLATBOOTS_EXPLAIN}</p>
 					<!-- ENDIF -->
 				</div>
-				<div class="col-md-6">
-					<img src="{ROOT_PATH}images/banner.jpg"
+				<div class="col-md-5 col-sm-5 col-xs-6">
+					<img src="{ROOT_PATH}images/banner.svg"
 						alt="Heavenly Herbals | Organic Herbal Supplements for Complete Wellness" style="width: 100%;">
 				</div>
     	</div>
