--- a/styles/FLATBOOTS/template/overall_header.html
+++ b/styles/FLATBOOTS/template/overall_header.html
@@ -131,7 +131,7 @@
 	<div class="header-bottom-part">
 		<div class="container">
 			<div class="row mobile-flex">
-				<div class="col-lg-3 col-md-2 col-sm-3 col-xs-5 right-padding logo-part-nav-left in-mobile">
+				<div class="col-lg-3 col-md-2 col-sm-3 col-xs-3 right-padding logo-part-nav-left in-mobile">
 					<div class="bottom-header-left-panel">
 						<div class="logo-box"> <a href="https://www.wellnessherbs.com/"><img src="{ROOT_PATH}images/heavenly-logo-dark.svg"
 									alt="Heavenly Herbals | Organic Herbal Supplements for Complete Wellness"></a> </div>
@@ -216,10 +216,10 @@
 						</div>
 					</form>
 				</div>
-				<div class="col-lg-4 col-md-5 col-sm-4 col-xs-7 logo-part-nav-right">
+				<div class="col-lg-4 col-md-5 col-sm-4 col-xs-9 logo-part-nav-right">
 					<div class="search-block">
 						<div class="row">
-							<div class="col-xs-10 left-padding text-right">
+							<div class="col-md-10 col-sm-9 col-xs-10 left-padding text-right">
 								<div class="top-header-nav">
 									<ul class="nav navbar-nav pull-right">
 										<!-- IF not S_USER_LOGGED_IN -->
@@ -263,9 +263,9 @@
 													class="header-text hidden-sm hidden-xs">Favorites</span></a></li> -->
 
 										<li><a
-												href="https://www.wellnessherbs.com/index.php?route=extension/module/questions_and_answers/faq"><span><i
-														class="icon icon-noun_question_help_629634_000000"></i></span><span
-													class="header-text hidden-xs hidden-sm">FAQ</span></a></li>
+												href="https://www.wellnessherbs.com/insight-blog"><span><i
+														class="icon icon-blog-green"></i></span><span
+													class="header-text hidden-xs hidden-sm">Blog</span></a></li>
 
 
 										<li class="hide-small"><a href="https://affiliate.wellnessherbs.com/"><span><i
@@ -275,7 +275,7 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-xs-2 left-padding text-right cart-block">
+							<div class="col-md-2 col-sm-3 col-xs-2 left-padding text-right cart-block">
 								<div id="cart">
 									<a href="https://www.wellnessherbs.com/">
 										<div class="cart-block dropdown-toggle">
