--- a/styles/FLATBOOTS/template/overall_footer.html
+++ b/styles/FLATBOOTS/template/overall_footer.html
@@ -53,7 +53,7 @@
 											class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 							</ul>
 
-							<ul class="payment-list list-inline mobile-visible">
+							<ul class="payment-list list-inline mobile-visible text-center">
 								<li><a href="javascript:void(0);"><img loading="lazy"
 											src="https://www.wellnessherbs.com/image/cache/wp/ep/catalog/view/theme/howashafi/image/images/paypel.webp"
 											alt="Paypel" width="50" height="32"></a></li>
