update wellness forum

--- a/styles/FLATBOOTS/template/addons/header_teaser_body.html
+++ b/styles/FLATBOOTS/template/addons/header_teaser_body.html
@@ -4,11 +4,11 @@
 	 		<div class="container">
 				<div class="col-md-7 col-sm-7 col-xs-6">
 					<!-- IF TEASER_TITLE neq '' or TEASER_TEXT neq '' -->
-					<h1>{TEASER_TITLE}</h1>
-					<p>{TEASER_TEXT}</p>
+					<h1>Homeopathy changes lives. Heavenly Herbals Incorporation empowers homeopathy worldwide.</h1>
+					<p>Our mission is to inspire more people to embrace a natural approach to complete wellness.</p>
 					<!-- ELSE -->
-					<h1>{L_FLATBOOTS_INTRO}&nbsp;<a class="label label-call" href="https://getbootstrap.com/">{L_BOOTSTRAP_VERSION}</a></h1>
-					<p>{L_FLATBOOTS_EXPLAIN}</p>
+					<h1>Homeopathy changes lives. Heavenly Herbals Incorporation empowers homeopathy worldwide.</a></h1>
+					<p>Our mission is to inspire more people to embrace a natural approach to complete wellness.</p>
 					<!-- ENDIF -->
 				</div>
 				<div class="col-md-5 col-sm-5 col-xs-6">
