--- a/styles/FLATBOOTS/template/addons/call_to_action_body.html
+++ b/styles/FLATBOOTS/template/addons/call_to_action_body.html
@@ -1,12 +1,7 @@
 <div class="mastbottom">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-9">
-		      <p class="call-to-action">{L_CALL_TO_ACTION_FOOTER}</p>
-			</div>
-			<div class="col-md-3">
-			  <a href="http://goo.gl/LvmwlF" class="btn btn-xl btn-danger pull-right" title="">{L_PURCHASE_NOW_BTN}</a>
-			</div>
+			<!-- INCLUDE addons/recent_topics_body.html -->
 		</div>
 	</div>
 </div>
