--- a/styles/FLATBOOTS/template/login_body.html
+++ b/styles/FLATBOOTS/template/login_body.html
@@ -101,4 +101,8 @@
 			    </div>  
             </div>
     </div>
+		<script>
+			console.log(document.getElementById('username'))
+			document.getElementById('username').focus()
+		</script>
 <!-- INCLUDE overall_footer.html -->
