--- a/styles/FLATBOOTS/theme/custom.css
+++ b/styles/FLATBOOTS/theme/custom.css
@@ -1153,13 +1153,24 @@ a:visited {
   .flat-header {
     height: 106px;
   }
+  .panel-post .title {
+    padding-left: 0px;
+  }
+  .carousel-wrapper {
+    width: 255px;
+    margin: auto !important;
+  }
 
   .wrapper-head {
     margin-top: 16px;
   }
 
+  .flat-header P {
+    font-size: 9px;
+  }
+
   .flat-header h1 {
-    font-size: 18px;
+    font-size: 10px;
   }
 
   .flat-header .container {
@@ -1190,6 +1201,18 @@ a:visited {
   .flat-header {
     height: 127px;
   }
+  
+  .flat-header P {
+    font-size: 11px;
+  }
+
+  .flat-header h1 {
+    font-size: 12px;
+  }
+  .carousel-wrapper {
+    width: 305px;
+    margin: auto !important;
+  }
 
   .wrapper-head {
     margin-top: 18px;
@@ -1215,6 +1238,19 @@ a:visited {
     height: 144px;
   }
 
+  .carousel-wrapper {
+    width: 355px;
+    margin: auto !important;
+  }
+
+  .flat-header P {
+    font-size: 11px;
+  }
+
+  .flat-header h1 {
+    font-size: 15px;
+  }
+
   .wrapper-head {
     margin-top: 20px;
   }
@@ -1236,6 +1272,17 @@ a:visited {
 @media (min-width: 768px) {
   .wrapper-head .container {
     width: 765px
+  }
+
+  .carousel-wrapper {
+    width: 696px;
+    margin: auto !important;
+  }
+  .panel-post .title {
+    padding-left: 20px;
+  }
+  .flat-header P {
+    font-size: 9px;
   }
 
   .flat-header h1 {
@@ -1272,6 +1319,11 @@ a:visited {
     width: 1024px
   }
 
+  .carousel-wrapper {
+    width: 950px;
+    margin: auto !important;
+  }
+
   .flat-header {
     height: 300px;
   }
@@ -1294,6 +1346,11 @@ a:visited {
     width: 1300px
   }
 
+  .carousel-wrapper {
+    width: 1140px;
+    margin: auto !important;
+  }
+
   .flat-header {
     height: 390px;
   }
@@ -1301,4 +1358,155 @@ a:visited {
   .wrapper-head {
     margin-top: 54px;
   }
+}
+
+.top-header-nav ul .user-login-drop.arrow-up:before {
+  display: none;
+}
+
+.top-header-nav > ul.navbar-nav > li {
+  position: relative;
+}
+
+.top-header-nav ul .user-login-drop.arrow-up {
+  position: absolute;
+}
+
+.top-header-nav ul .user-login-drop .separator:before {
+  top: 0;
+  margin-top: 2px;
+}
+
+.new-customize-wellnessherbs .logo-part-nav-right .top-header-nav ul.nav .user-login-drop li a {
+  align-items: center;
+  display: flex;
+}
+
+.new-customize-wellnessherbs .logo-part-nav-right .top-header-nav .header-icon-dropdown-menu.user-login-drop li {
+  padding: 2px;
+}
+
+.new-customize-wellnessherbs .logo-part-nav-right .top-header-nav .header-icon-dropdown-menu.user-login-drop li:first-child {
+  padding: 8px;
+}
+
+.top-header-nav .navbar-nav .open .user-login-drop.dropdown-menu {
+  background-color: #fff;
+  box-shadow: 1px 1px 6px 1px #555;
+  border: 4px solid #e8ecf3;
+  right: -120px;
+  left: auto;
+}
+
+#rtblock .panel-post .panel-bottom a {
+  color: #fff;
+}
+
+#rtblock .panel-post .panel-bottom a:hover {
+  color: #fff;
+}
+
+.panel-post {
+  max-height: max-content;
+}
+
+.panel-post .content-post {
+  margin-bottom: 10px;
+  max-height: fit-content;
+}
+
+.panel-post .content-post img {
+  width: 100%;
+}
+
+.mastbottom .panel-post {
+  margin-bottom: 0;
+}
+
+.mastbottom {
+  background: #e7e7e7;
+}
+
+.carousel-wrapper {
+  margin: auto;
+  position: relative;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.owl-carousel .owl-nav {
+  overflow: hidden;
+  height: 0px;
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+  background: #5110e9;
+}
+
+.owl-carousel .item {
+  text-align: center;
+}
+
+.owl-carousel .nav-button {
+  height: 50px;
+  width: 25px;
+  cursor: pointer;
+  position: absolute;
+  top: 110px !important;
+}
+
+.owl-carousel .owl-prev.disabled,
+.owl-carousel .owl-next.disabled {
+  pointer-events: none;
+  opacity: 0.25;
+}
+
+.owl-carousel .owl-prev {
+  left: -35px;
+}
+
+.owl-carousel .owl-next {
+  right: -35px;
+}
+
+.owl-theme .owl-nav [class*=owl-] {
+  color: #ffffff;
+  font-size: 26px;
+  background: #28720a;
+  border-radius: 3px;
+}
+
+.owl-theme .owl-nav [class*=owl-]:hover {
+  background: #222;
+}
+
+.owl-carousel .prev-carousel:hover {
+  background-position: 0px -53px;
+}
+
+.owl-carousel .next-carousel:hover {
+  background-position: -24px -53px;
+}
+
+.carousel-wrapper .title header {
+  color: #222;
+}
+
+.carousel-wrapper .title header h6 {
+  margin: 0;
+  max-height: 18px;
+  min-height: 18px;
+  text-overflow: ellipsis;
+  width: 100%;
+  white-space: nowrap;
+}
+
+.checked {
+  color: orange;
+}
+
+.panel-post .title {
+  margin: 0px 0 50px;
+  max-height: 60px;
 }
