update wellness forum

--- a/styles/FLATBOOTS/template/overall_footer.html
+++ b/styles/FLATBOOTS/template/overall_footer.html
@@ -186,7 +186,7 @@
 	</div>
 	<!-- ENDIF -->
 
-<a id="totop" class="top-flat" href="" onclick="return false;" style="display:none;" aria-label="to-top"></a>
+<!-- <a id="totop" class="top-flat" href="" onclick="return false;" style="display:none;" aria-label="to-top"></a> -->
 
 <div class="hidden"><!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF --></div> 
 
