--- a/styles/FLATBOOTS/template/addons/navigation.html
+++ b/styles/FLATBOOTS/template/addons/navigation.html
@@ -49,7 +49,7 @@
 			   <li><a href="{U_MARK_FORUMS}" data-ajax="mark_forums_read"><i class="fa fa-check"></i>{L_MARK_FORUMS_READ}</a></li>
 	           <!-- ENDIF -->
 			   <!-- EVENT overall_header_navigation_prepend -->
-			   <li><a href="{U_FAQ}"><i class="fa fa-question-circle"></i>{L_FAQ}</a></li>
+			   <!-- <li><a href="{U_FAQ}"><i class="fa fa-question-circle"></i>{L_FAQ}</a></li> -->
 			   <!-- EVENT overall_header_navigation_append -->
 			   <!-- IF S_DISPLAY_MEMBERLIST --><li><a href="{U_MEMBERLIST}"><i class="fa fa-group"></i>{L_MEMBERLIST}</a></li><!-- ENDIF -->
 			  <!-- IF U_TEAM --><li><a href="{U_TEAM}"><i class="fa fa-trophy"></i>{L_THE_TEAM}</a></li><!-- ENDIF -->
