update wellness forum

--- a/styles/FLATBOOTS/template/overall_header.html
+++ b/styles/FLATBOOTS/template/overall_header.html
@@ -332,7 +332,7 @@
 
 		
     <!-- EVENT header_breadcrumb_before -->
-	<div class="breadcrumb-line clearfix">
+	<div class="-line clearfix">
 		<ul class="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList">
 		<!-- DEFINE $MICRODATA = ' itemtype="https://schema.org/ListItem" itemprop="itemListElement" itemscope' -->
         {% set navlink_position = 1 %}
