--- a/styles/FLATBOOTS/template/forumlist_body.html
+++ b/styles/FLATBOOTS/template/forumlist_body.html
@@ -22,7 +22,7 @@
 	   <div class="panel panel-forum forum-list-body">
 	     <div class="panel-heading">
 				<ul class="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList">
-					<li><a href="{U_INDEX}" aria-label="{L_INDEX}"><span class="icon fa fa-solid fa-megaphone fa-fw"></span></a></li>
+					<li><a href="{U_INDEX}" aria-label="{L_INDEX}"><span class="icon fa fa-forumbee"></span></a></li>
 					<!-- EVENT overall_header_breadcrumbs_before -->
 					<li {$MICRODATA}><!-- IF forumrow.S_IS_CAT --><a
 						href="{forumrow.U_VIEWFORUM}">{forumrow.FORUM_NAME}</a><!-- ELSEIF forumrow.S_IS_LINK -->{L_LINKS}<!-- ELSE -->{L_FORUM}<!-- ENDIF -->
